created component dishdetail, done assignment 1 , Data Binding

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
 
     <div fxFlex>
       <mat-grid-list cols="2" rowHeight="200px">
-        <mat-grid-tile *ngFor="let dish of dishes">
+        <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
           <img height="200px" src={{dish.image}} alt={{dish.name}}>
           <mat-grid-tile-footer>
             <h1>{{dish.name | uppercase}}</h1>
@@ -20,7 +20,7 @@
       </mat-grid-list>
     </div>
 
-    <div fxFlex *ngIf="selectedDish">
+   <!--  <div fxFlex *ngIf="selectedDish">
       <mat-card>
         <mat-card-header>
           <mat-card-title>
@@ -38,7 +38,7 @@
         </mat-card-actions>
       </mat-card>
     </div>
-
+ -->
   <!-- <mat-list fxFlex>
     <mat-list-item *ngFor="let dish of dishes">
       <img matListAvatar src={{dish.image}} alt={{dish.name}}>
@@ -50,3 +50,4 @@
   </mat-list> -->
 
 </div>
+<app-dishdetail [dish]="selectedDish"></app-dishdetail>
