--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,6 +6,11 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
+
+    <div fxFlex [hidden]="dish">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+    
  <div fxFlex="40">
   <div fxFlex *ngIf="dish">
     <mat-card>
@@ -40,5 +45,7 @@
   </mat-list> 
 </div>
 </div>
+
+
     
 </div>
