--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,10 @@
         </mat-card-content>
       </mat-card>
 
+      <div fxFlex [hidden]="dish">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
+
       <mat-card *ngIf="promotion" fxFlex>
         <mat-card-header>
           <div mat-card-avatar></div>
@@ -32,7 +36,9 @@
           </p>
         </mat-card-content>
       </mat-card>
-
+     <div fxFlex [hidden]="promotion">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
       <mat-card *ngIf="leader" fxFlex>
         <mat-card-header>
           <div mat-card-avatar></div>
@@ -48,5 +54,8 @@
           </p>
         </mat-card-content>
       </mat-card>
+      <div fxFlex [hidden]="leader">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
       
       </div>
