--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -48,10 +48,35 @@
       <div matLine>{{comment["rating"]}} stars</div>
       <div matLine>--{{comment["author"]}} {{ comment["date"] | date}} </div>
     </mat-list-item>
-  </mat-list> 
-</div>
-</div>
 
+    <mat-list-item *ngIf="CommentForm.touched && CommentForm.valid">
+      <div matLine> {{CommentForm.value.comment}} </div>
+      <div matLine>{{CommentForm.value.rating}} stars</div>
+      <div matLine>--{{CommentForm.value.author}} </div>
+    </mat-list-item>
+
+  </mat-list> 
+
+ 
+
+<form novalidate [formGroup]="CommentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+  <p>
+    <mat-form-field  class="full-width">
+      <input matInput formControlName="author" placeholder="Name" type="text"  >
+      <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+    </mat-form-field>
+ 
+   
+    <mat-slider min="1" max="5" step="1" value="1.5" formControlName="rating" thumbLabel tickInterval="1" ></mat-slider>
+    <mat-form-field class="full-width">
+      <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 ></textarea>
+      <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+    </mat-form-field>
+  </p>
+  <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="CommentForm.invalid">Submit</button>
+</form>
+</div>
+</div>
 
     
 </div>
