--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,8 +7,12 @@
     fxLayoutGap.xs="0">
 
 
-    <div fxFlex [hidden]="dish">
+    <div fxFlex [hidden]="dish || errMess">
       <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <p>{{errMess}}</p>
     </div>
     
  <div fxFlex="40">
