--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,8 +20,12 @@
       </mat-grid-list>
     </div>
 
-    <div fxFlex [hidden]="dishes">
+    <div fxFlex [hidden]="dishes || errMess">
       <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <p>{{errMess}}</p>
     </div>
 
    <!--  <div fxFlex *ngIf="selectedDish">
